updated CORS configuration; product list pagination; implemented API rate limiting; fixed issue on failed login